--- a/bldsys/cmake/template/gradle/gradle.properties.in
+++ b/bldsys/cmake/template/gradle/gradle.properties.in
@@ -1,7 +1,4 @@
 android.useAndroidX=true
-android.enableJetifier=false
+android.enableJetifier=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.caching=true
-android.prefabVersion=2.0.0
-
